// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test GraphNodeImpl serializable 1`] = `
"{
  "id": "CTbIKp8aUffoxEsva",
  "type": "graph",
  "subType": "subgraph",
  "registerArgs": {
    "nodes": [
      {
        "id": "p_@qX3EzePA7RJ4mx",
        "type": "prompt",
        "subType": "chat",
        "data": {
          "_grp": 1,
          "_type": "constructor",
          "_id": [
            "events",
            "input",
            "load",
            "prompts",
            "chat",
            "ChatPrompt"
          ],
          "_kwargs": {
            "messages": []
          }
        },
        "visualInfo": {
          "position": {
            "x": 0,
            "y": 0
          },
          "size": {
            "width": 300,
            "height": 500
          }
        },
        "inputs": {},
        "outputs": {
          "prompt": [
            "string",
            "chat-message[]"
          ]
        }
      },
      {
        "id": "E3OX0T5h1lhIXJMjH",
        "type": "chatlm",
        "subType": "openai",
        "data": {
          "_grp": 1,
          "_type": "constructor",
          "_id": [
            "events",
            "inference",
            "chat",
            "chatlms",
            "openai",
            "OpenAIChat"
          ],
          "_kwargs": {
            "model": "gpt-3.5-turbo",
            "frequency_penalty": 0,
            "presence_penalty": 0,
            "stream": false,
            "temperature": 1,
            "max_tokens": 2048,
            "top_p": 1,
            "additional_kwargs": {},
            "openai_api_key": {
              "_grp": 1,
              "_type": "secret",
              "_id": [
                "OPENAI_API_KEY"
              ]
            }
          }
        },
        "visualInfo": {
          "position": {
            "x": 0,
            "y": 0
          },
          "size": {
            "width": 300,
            "height": 500
          }
        },
        "inputs": {
          "prompt": [
            "string",
            "chat-message[]"
          ]
        },
        "outputs": {
          "output": "string",
          "message": "chat-message",
          "info": [
            "object",
            "unknown"
          ],
          "completionTokens": [
            "number",
            "unknown"
          ],
          "promptTokens": [
            "number",
            "unknown"
          ],
          "totalTokens": [
            "number",
            "unknown"
          ]
        }
      }
    ],
    "connections": [
      {
        "fromNodeId": "p_@qX3EzePA7RJ4mx",
        "fromPortName": "prompt",
        "toNodeId": "E3OX0T5h1lhIXJMjH",
        "toPortName": "prompt"
      }
    ]
  },
  "data": {
    "_grp": 1,
    "_type": "constructor",
    "_id": [
      "studio",
      "graph",
      "SubGraph"
    ],
    "_kwargs": {
      "nodes": [
        {
          "id": "p_@qX3EzePA7RJ4mx",
          "type": "prompt",
          "subType": "chat",
          "data": {
            "_grp": 1,
            "_type": "constructor",
            "_id": [
              "events",
              "input",
              "load",
              "prompts",
              "chat",
              "ChatPrompt"
            ],
            "_kwargs": {
              "messages": []
            }
          },
          "visualInfo": {
            "position": {
              "x": 0,
              "y": 0
            },
            "size": {
              "width": 300,
              "height": 500
            }
          },
          "inputs": {},
          "outputs": {
            "prompt": [
              "string",
              "chat-message[]"
            ]
          }
        },
        {
          "id": "E3OX0T5h1lhIXJMjH",
          "type": "chatlm",
          "subType": "openai",
          "data": {
            "_grp": 1,
            "_type": "constructor",
            "_id": [
              "events",
              "inference",
              "chat",
              "chatlms",
              "openai",
              "OpenAIChat"
            ],
            "_kwargs": {
              "model": "gpt-3.5-turbo",
              "frequency_penalty": 0,
              "presence_penalty": 0,
              "stream": false,
              "temperature": 1,
              "max_tokens": 2048,
              "top_p": 1,
              "additional_kwargs": {},
              "openai_api_key": {
                "_grp": 1,
                "_type": "secret",
                "_id": [
                  "OPENAI_API_KEY"
                ]
              }
            }
          },
          "visualInfo": {
            "position": {
              "x": 0,
              "y": 0
            },
            "size": {
              "width": 300,
              "height": 500
            }
          },
          "inputs": {
            "prompt": [
              "string",
              "chat-message[]"
            ]
          },
          "outputs": {
            "output": "string",
            "message": "chat-message",
            "info": [
              "object",
              "unknown"
            ],
            "completionTokens": [
              "number",
              "unknown"
            ],
            "promptTokens": [
              "number",
              "unknown"
            ],
            "totalTokens": [
              "number",
              "unknown"
            ]
          }
        }
      ],
      "connections": [
        {
          "fromNodeId": "p_@qX3EzePA7RJ4mx",
          "fromPortName": "prompt",
          "toNodeId": "E3OX0T5h1lhIXJMjH",
          "toPortName": "prompt"
        }
      ]
    }
  },
  "visualInfo": {
    "position": {
      "x": 0,
      "y": 0
    },
    "size": {
      "width": 300,
      "height": 500
    }
  },
  "inputs": {},
  "outputs": {
    "output": "string",
    "message": "chat-message",
    "info": [
      "object",
      "unknown"
    ],
    "completionTokens": [
      "number",
      "unknown"
    ],
    "promptTokens": [
      "number",
      "unknown"
    ],
    "totalTokens": [
      "number",
      "unknown"
    ]
  }
}"
`;

exports[`test GraphNodeImpl serializable 2`] = `
"{
  "_type": "node",
  "id": "CTbIKp8aUffoxEsva",
  "type": "graph",
  "subType": "subgraph",
  "registerArgs": {
    "nodes": [
      {
        "id": "p_@qX3EzePA7RJ4mx",
        "type": "prompt",
        "subType": "chat",
        "data": {
          "_grp": 1,
          "_type": "constructor",
          "_id": [
            "events",
            "input",
            "load",
            "prompts",
            "chat",
            "ChatPrompt"
          ],
          "_kwargs": {
            "messages": []
          }
        },
        "visualInfo": {
          "position": {
            "x": 0,
            "y": 0
          },
          "size": {
            "width": 300,
            "height": 500
          }
        },
        "inputs": {},
        "outputs": {
          "prompt": [
            "string",
            "chat-message[]"
          ]
        }
      },
      {
        "id": "E3OX0T5h1lhIXJMjH",
        "type": "chatlm",
        "subType": "openai",
        "data": {
          "_grp": 1,
          "_type": "constructor",
          "_id": [
            "events",
            "inference",
            "chat",
            "chatlms",
            "openai",
            "OpenAIChat"
          ],
          "_kwargs": {
            "model": "gpt-3.5-turbo",
            "frequency_penalty": 0,
            "presence_penalty": 0,
            "stream": false,
            "temperature": 1,
            "max_tokens": 2048,
            "top_p": 1,
            "additional_kwargs": {},
            "openai_api_key": {
              "_grp": 1,
              "_type": "secret",
              "_id": [
                "OPENAI_API_KEY"
              ]
            }
          }
        },
        "visualInfo": {
          "position": {
            "x": 0,
            "y": 0
          },
          "size": {
            "width": 300,
            "height": 500
          }
        },
        "inputs": {
          "prompt": [
            "string",
            "chat-message[]"
          ]
        },
        "outputs": {
          "output": "string",
          "message": "chat-message",
          "info": [
            "object",
            "unknown"
          ],
          "completionTokens": [
            "number",
            "unknown"
          ],
          "promptTokens": [
            "number",
            "unknown"
          ],
          "totalTokens": [
            "number",
            "unknown"
          ]
        }
      }
    ],
    "connections": [
      {
        "fromNodeId": "p_@qX3EzePA7RJ4mx",
        "fromPortName": "prompt",
        "toNodeId": "E3OX0T5h1lhIXJMjH",
        "toPortName": "prompt"
      }
    ]
  },
  "title": "SubGraph",
  "description": "",
  "runtime": 0,
  "memory": 0,
  "data": {
    "_grp": 1,
    "_type": "constructor",
    "_id": [
      "studio",
      "graph",
      "SubGraph"
    ],
    "_kwargs": {
      "nodes": [
        {
          "id": "p_@qX3EzePA7RJ4mx",
          "type": "prompt",
          "subType": "chat",
          "data": {
            "_grp": 1,
            "_type": "constructor",
            "_id": [
              "events",
              "input",
              "load",
              "prompts",
              "chat",
              "ChatPrompt"
            ],
            "_kwargs": {
              "messages": []
            }
          },
          "visualInfo": {
            "position": {
              "x": 0,
              "y": 0
            },
            "size": {
              "width": 300,
              "height": 500
            }
          },
          "inputs": {},
          "outputs": {
            "prompt": [
              "string",
              "chat-message[]"
            ]
          }
        },
        {
          "id": "E3OX0T5h1lhIXJMjH",
          "type": "chatlm",
          "subType": "openai",
          "data": {
            "_grp": 1,
            "_type": "constructor",
            "_id": [
              "events",
              "inference",
              "chat",
              "chatlms",
              "openai",
              "OpenAIChat"
            ],
            "_kwargs": {
              "model": "gpt-3.5-turbo",
              "frequency_penalty": 0,
              "presence_penalty": 0,
              "stream": false,
              "temperature": 1,
              "max_tokens": 2048,
              "top_p": 1,
              "additional_kwargs": {},
              "openai_api_key": {
                "_grp": 1,
                "_type": "secret",
                "_id": [
                  "OPENAI_API_KEY"
                ]
              }
            }
          },
          "visualInfo": {
            "position": {
              "x": 0,
              "y": 0
            },
            "size": {
              "width": 300,
              "height": 500
            }
          },
          "inputs": {
            "prompt": [
              "string",
              "chat-message[]"
            ]
          },
          "outputs": {
            "output": "string",
            "message": "chat-message",
            "info": [
              "object",
              "unknown"
            ],
            "completionTokens": [
              "number",
              "unknown"
            ],
            "promptTokens": [
              "number",
              "unknown"
            ],
            "totalTokens": [
              "number",
              "unknown"
            ]
          }
        }
      ],
      "connections": [
        {
          "fromNodeId": "p_@qX3EzePA7RJ4mx",
          "fromPortName": "prompt",
          "toNodeId": "E3OX0T5h1lhIXJMjH",
          "toPortName": "prompt"
        }
      ]
    }
  },
  "visualInfo": {
    "position": {
      "x": 0,
      "y": 0
    },
    "size": {
      "width": 300,
      "height": 500
    }
  },
  "inputs": {},
  "outputs": {
    "output": "string",
    "message": "chat-message",
    "info": [
      "object",
      "unknown"
    ],
    "completionTokens": [
      "number",
      "unknown"
    ],
    "promptTokens": [
      "number",
      "unknown"
    ],
    "totalTokens": [
      "number",
      "unknown"
    ]
  },
  "outgoingConnections": {
    "prompt": {
      "toNodeId": "E3OX0T5h1lhIXJMjH",
      "toPortName": "prompt"
    }
  }
}"
`;
